Replace application icon

--- a/PS Wishlist/WPFUI/PsWishlist.csproj
+++ b/PS Wishlist/WPFUI/PsWishlist.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>ps.ico</ApplicationIcon>
+    <ApplicationIcon>controller.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release 64bit|AnyCPU'">
     <OutputPath>bin\Release 64bit\</OutputPath>
@@ -162,7 +162,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="ps.ico" />
+    <Resource Include="controller.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
