--- a/PS Wishlist/WPFUI/PsWishlist.csproj
+++ b/PS Wishlist/WPFUI/PsWishlist.csproj
@@ -89,6 +89,7 @@
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
